# cleo

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cleo  cleo.cmd  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build.yml  ci.yml  release-please.yml  release.yml
plugin/: settings.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: cleo-find.md  cleo-install.md  cleo-list.md  cleo-publish.md  cleo-remove.md  cleo-require.md  cleo-update.md
spec/: cleo-json.md  cleo-lock.md  package-format.md  security.md
tests/: test_adopt.py  test_checks.py  test_cli.py  test_manifest.py  test_publish.py  test_resolver.py  test_security.py  test_semver.py  test_sources.py
tools/: cleo.py
tools/lib/: adopt.py  checks.py  publish.py  resolver.py  security.py  semver.py  sources.py
