[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cleo-pm"
dynamic = ["version"]
description = "Dependency manager for the Claude ecosystem — rules, skills, agents, commands, hooks, MCP servers."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    { name = "Erik Wiesenthal", email = "erikforo@hotmail.com" },
]
keywords = ["claude", "claude-code", "dependency-manager", "mcp", "ai", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = ["pyyaml"]

[project.urls]
Homepage = "https://github.com/Surt/cleo"
Repository = "https://github.com/Surt/cleo"
Issues = "https://github.com/Surt/cleo/issues"
Changelog = "https://github.com/Surt/cleo/blob/main/CHANGELOG.md"

[project.scripts]
cleo = "cleo_pm.cleo:main_cli"

[tool.setuptools]
packages = ["cleo_pm", "cleo_pm.lib"]

[tool.setuptools.package-dir]
"cleo_pm" = "tools"

[tool.setuptools_scm]
